--- a/package.json
+++ b/package.json
@@ -9,10 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "eslint": "8.47.0",
-    "eslint-config-next": "13.4.16",
-    "next": "13.4.16",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "@sanity/client": "^3.2.0",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.15.1",
+    "@stripe/stripe-js": "^1.25.0",
+    "canvas-confetti": "^1.5.1",
+    "next": "12.1.0",
+    "next-sanity": "^5.4.0",
+    "next-sanity-image": "^3.2.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-hot-toast": "^2.2.0",
+    "react-icons": "^4.3.1",
+    "sanity": "^3.15.1",
+    "stripe": "^8.209.0",
+    "styled-components": "5.2"
+  },
+  "devDependencies": {
+    "eslint": "^8.10.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-next": "^12.1.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.29.3",
+    "eslint-plugin-react-hooks": "^4.3.0"
   }
 }
